hello-world-backend/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-cloud-tech-preview
