hello-world-backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-hello-world-backend
  namespace: multi-cloud-tech-preview
  labels:
    app: hello-world-backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    protocol: TCP
  selector:
    app: hello-world-backend
