hello-world-backend/kubernetes/istio-gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-hello-world-backend
  namespace: multi-cloud-tech-preview
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-hello-world-backend
  namespace: multi-cloud-tech-preview
spec:
  hosts:
  - "*"
  gateways:
  - gw-hello-world-backend
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 8000
        host: svc-hello-world-backend
